Updated skill logos

--- a/style/_body.scss
+++ b/style/_body.scss
@@ -126,7 +126,7 @@
 }
 
 .icons-collection.icons-design {
-	grid-template-columns: 1fr 1fr;
+	grid-template-columns: 1fr 1fr 1fr;
 	grid-gap: 2.4rem;
 }
 
