--- a/style/_global.scss
+++ b/style/_global.scss
@@ -11,35 +11,36 @@ html {
 body {
 	background-color: $bg-color;
 	overflow-x: hidden;
+	max-width: 100vw;
 }
 
 h1 {
 	font-size: $header1;
-	font-family: "Open Sans Condensed", sans-serif;
+	font-family: 'Open Sans Condensed', sans-serif;
 	color: white;
 }
 
 h2 {
 	font-size: $header2;
-	font-family: "Open Sans Condensed", sans-serif;
+	font-family: 'Open Sans Condensed', sans-serif;
 	color: white;
 }
 
 h3 {
 	font-size: $header3;
-	font-family: "Open Sans Condensed", sans-serif;
+	font-family: 'Open Sans Condensed', sans-serif;
 	color: white;
 }
 
 h4 {
 	font-size: $header4;
-	font-family: "Raleway", sans-serif;
+	font-family: 'Raleway', sans-serif;
 	font-weight: 500;
 	color: white;
 }
 h5 {
 	font-size: $header5;
-	font-family: "Raleway", sans-serif;
+	font-family: 'Raleway', sans-serif;
 	font-weight: 500;
 	color: white;
 }
@@ -51,7 +52,7 @@ p,
 input,
 label {
 	font-size: $text;
-	font-family: "Raleway", sans-serif;
+	font-family: 'Raleway', sans-serif;
 	line-height: 3.2rem;
 	color: white;
 }
