--- a/style/_header_footer.scss
+++ b/style/_header_footer.scss
@@ -1,7 +1,6 @@
 //NAV SECTION
 
 nav {
-	// min-height: 5vh;
 	background: linear-gradient(to bottom right, $green1, $green2);
 	@include shadow();
 }
@@ -10,7 +9,7 @@ nav {
 	z-index: 2;
 	// transform: scale(0.35);
 	svg {
-		height: 3.8rem;
+		height: 2rem;
 		width: 100%;
 		text-shadow: 0px 3px 6px rgba($color: #000000, $alpha: 0.2);
 	}
@@ -30,6 +29,7 @@ nav {
 }
 
 .nav-header {
+	min-height: 5vh;
 	@include width(95%);
 	padding: 0.5rem;
 	@include flex(space-between, center, row);
@@ -166,7 +166,7 @@ body.hide {
 	flex: 1 1 20rem;
 	margin-bottom: 3rem;
 	h1 {
-		font-family: "Raleway", sans-serif;
+		font-family: 'Raleway', sans-serif;
 		font-size: 3rem;
 		text-align: left;
 		margin-bottom: 2rem;
