--- a/style/_media.scss
+++ b/style/_media.scss
@@ -1,9 +1,9 @@
 @media screen and (min-width: 1200px) {
 	//NAV/HERO
 
-	#logo {
-		transform: scale(0.65);
-	}
+	// #logo {
+	// 	transform: scale(0.65);
+	// }
 
 	.hero-section {
 		min-height: 60vh;
@@ -18,7 +18,7 @@
 		flex: 1 1 20rem;
 		margin-bottom: 3rem;
 		h1 {
-			font-family: "Raleway", sans-serif;
+			font-family: 'Raleway', sans-serif;
 			font-size: 6rem;
 			margin-bottom: 2rem;
 			margin-top: 4rem;
@@ -124,6 +124,10 @@
 	}
 }
 @media screen and (min-width: 800px) {
+	// .project-card {
+	// 	max-width: 95vw;
+	// 	min-width: 80vw;
+	// }
 	.work-card {
 		min-width: 25%;
 	}
