--- a/style/main.css
+++ b/style/main.css
@@ -13,36 +13,37 @@ html {
 body {
   background-color: #131919;
   overflow-x: hidden;
+  max-width: 100vw;
 }
 
 h1 {
   font-size: 6rem;
-  font-family: "Open Sans Condensed", sans-serif;
+  font-family: 'Open Sans Condensed', sans-serif;
   color: white;
 }
 
 h2 {
   font-size: 4rem;
-  font-family: "Open Sans Condensed", sans-serif;
+  font-family: 'Open Sans Condensed', sans-serif;
   color: white;
 }
 
 h3 {
   font-size: 3.5rem;
-  font-family: "Open Sans Condensed", sans-serif;
+  font-family: 'Open Sans Condensed', sans-serif;
   color: white;
 }
 
 h4 {
   font-size: 2.4rem;
-  font-family: "Raleway", sans-serif;
+  font-family: 'Raleway', sans-serif;
   font-weight: 500;
   color: white;
 }
 
 h5 {
   font-size: 1.2rem;
-  font-family: "Raleway", sans-serif;
+  font-family: 'Raleway', sans-serif;
   font-weight: 500;
   color: white;
 }
@@ -54,7 +55,7 @@ p,
 input,
 label {
   font-size: 2rem;
-  font-family: "Raleway", sans-serif;
+  font-family: 'Raleway', sans-serif;
   line-height: 3.2rem;
   color: white;
 }
@@ -90,8 +91,8 @@ a {
 nav {
   background: -webkit-gradient(linear, left top, right bottom, from(#00a295), to(#5dd98a));
   background: linear-gradient(to bottom right, #00a295, #5dd98a);
-  -webkit-box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.2);
-          box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0px 8px 50px 5px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 8px 50px 5px rgba(0, 0, 0, 0.1);
 }
 
 #logo {
@@ -99,7 +100,7 @@ nav {
 }
 
 #logo svg {
-  height: 3.8rem;
+  height: 2rem;
   width: 100%;
   text-shadow: 0px 3px 6px rgba(0, 0, 0, 0.2);
 }
@@ -118,6 +119,7 @@ nav {
 }
 
 .nav-header {
+  min-height: 5vh;
   width: 95%;
   margin: auto;
   padding: 0.5rem;
@@ -174,8 +176,8 @@ body.hide {
 }
 
 .appearance-toggle #toggle-bg {
-  -webkit-box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.2);
-          box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0px 8px 50px 5px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 8px 50px 5px rgba(0, 0, 0, 0.1);
 }
 
 .burger {
@@ -368,7 +370,7 @@ body.hide {
 }
 
 .hero-title h1 {
-  font-family: "Raleway", sans-serif;
+  font-family: 'Raleway', sans-serif;
   font-size: 3rem;
   text-align: left;
   margin-bottom: 2rem;
@@ -407,8 +409,8 @@ body.hide {
 .box2 {
   width: 6rem;
   height: 6rem;
-  -webkit-box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.2);
-          box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0px 8px 50px 5px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 8px 50px 5px rgba(0, 0, 0, 0.1);
 }
 
 .box1 {
@@ -500,10 +502,75 @@ footer h3 {
   margin-right: 2rem;
 }
 
+#projects {
+  width: 90%;
+  margin: auto;
+  margin-top: 20rem;
+  margin-bottom: 20rem;
+}
+
+#projects h1 {
+  text-align: center;
+  font-size: 8rem;
+}
+
+.projects-wrapper {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (minmax(350px, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+  grid-gap: 5rem;
+  justify-items: center;
+}
+
+.project-card {
+  background-color: #272b2e;
+  max-width: 60rem;
+  border-radius: 20px;
+  margin: 4rem 2rem;
+  padding: 6rem 4rem;
+  -webkit-box-shadow: 0px 8px 50px 5px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 8px 50px 5px rgba(0, 0, 0, 0.1);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.project-card img,
+.project-card h3,
+.project-card p {
+  margin-bottom: 3.2rem;
+}
+
+.project-card p {
+  text-align: center;
+  max-width: 80%;
+}
+
+.project-card img {
+  max-width: 85%;
+}
+
+.project-card h5 {
+  color: #808080;
+  font-size: 1.6rem;
+  font-weight: bold;
+}
+
 .work-section {
   width: 98%;
   margin: auto;
   margin-top: 20rem;
+  margin-bottom: 20rem;
   position: relative;
 }
 
@@ -529,11 +596,11 @@ footer h3 {
   background-color: #272b2e;
   min-height: 50vh;
   min-width: 95%;
+  border-radius: 20px;
   margin: 4rem 2rem;
-  padding: 4rem 3rem;
-  border: 1px solid #242424;
-  -webkit-box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.2);
-          box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.2);
+  padding: 6rem 4rem;
+  -webkit-box-shadow: 0px 8px 50px 5px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 8px 50px 5px rgba(0, 0, 0, 0.1);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -568,6 +635,7 @@ footer h3 {
 
 .work-card p {
   line-height: 4rem;
+  max-width: 85%;
 }
 
 .work-card-header {
@@ -676,8 +744,8 @@ footer h3 {
   border: 7px solid;
   border-image-slice: 1;
   border-image-source: linear-gradient(to bottom right, #00a295, #5dd98a);
-  -webkit-box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.2);
-          box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0px 8px 50px 5px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 8px 50px 5px rgba(0, 0, 0, 0.1);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -736,8 +804,8 @@ footer h3 {
 }
 
 .icons-collection svg path {
-  -webkit-box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.2);
-          box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0px 8px 50px 5px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 8px 50px 5px rgba(0, 0, 0, 0.1);
 }
 
 .icons-collection svg {
@@ -810,8 +878,8 @@ footer h3 {
   width: 8rem;
   height: 8rem;
   border-radius: 50%;
-  -webkit-box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.2);
-          box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0px 8px 50px 5px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 8px 50px 5px rgba(0, 0, 0, 0.1);
 }
 
 .design-bg {
@@ -847,7 +915,7 @@ footer h3 {
 }
 
 .client-logos::before, .client-logos::after {
-  content: "";
+  content: '';
   width: 100%;
   height: 0.5rem;
   background: -webkit-gradient(linear, left top, right top, from(#00a295), to(#5dd98a));
@@ -983,8 +1051,8 @@ footer h3 {
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  -webkit-box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.2);
-          box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0px 8px 50px 5px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 8px 50px 5px rgba(0, 0, 0, 0.1);
 }
 
 .photos-overlay p {
@@ -1055,8 +1123,8 @@ footer h3 {
   border-image-source: linear-gradient(to bottom right, #00a295, #5dd98a);
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  -webkit-box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.2);
-          box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0px 8px 50px 5px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 8px 50px 5px rgba(0, 0, 0, 0.1);
 }
 
 .about-card p {
@@ -1155,14 +1223,17 @@ body.light {
   opacity: 0.8;
 }
 
-.work-card.light {
+.work-card.light,
+.project-card.light {
   background-color: white;
-  border: 1px solid #dbdbdb;
 }
 
 .work-card.light h2,
 .work-card.light h3,
-.work-card.light p {
+.work-card.light p,
+.project-card.light h2,
+.project-card.light h3,
+.project-card.light p {
   color: #131919;
 }
 
@@ -1236,10 +1307,6 @@ footer.light {
 }
 
 @media screen and (min-width: 1200px) {
-  #logo {
-    -webkit-transform: scale(0.65);
-            transform: scale(0.65);
-  }
   .hero-section {
     min-height: 60vh;
   }
@@ -1266,7 +1333,7 @@ footer.light {
     margin-bottom: 3rem;
   }
   .hero-title h1 {
-    font-family: "Raleway", sans-serif;
+    font-family: 'Raleway', sans-serif;
     font-size: 6rem;
     margin-bottom: 2rem;
     margin-top: 4rem;
