--- a/style/main.scss
+++ b/style/main.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:ital,wght@0,300;0,700;1,300&family=Raleway:ital,wght@0,300;0,400;0,500;0,592;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:ital,wght@0,300;0,700;1,300&family=Raleway:ital,wght@0,300;0,400;0,500;0,592;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 $header1: 6rem;
 $header2: 4rem;
@@ -32,7 +32,8 @@ $green2: #5dd98a;
 }
 
 @mixin shadow() {
-	box-shadow: 0px 3px 6px rgba($color: #000000, $alpha: 0.2);
+	// box-shadow: 0px 3px 6px rgba($color: #000000, $alpha: 0.2);
+	box-shadow: 0px 8px 50px 5px rgba($color: #000000, $alpha: 0.1);
 }
 
 @mixin width($width) {
@@ -40,8 +41,8 @@ $green2: #5dd98a;
 	margin: auto;
 }
 
-@import "global";
-@import "header_footer";
-@import "body";
-@import "active";
-@import "media";
+@import 'global';
+@import 'header_footer';
+@import 'body';
+@import 'active';
+@import 'media';
